# psi-analyzer

projects/psi-core/: Cargo.toml
projects/psi-core/src/: lib.rs
projects/psi-core/src/errors/: mod.rs  runtime.rs
projects/psi-core/src/file_aspect/: file_node.rs  manager.rs  mod.rs
projects/psi-core/src/language_aspect/: id.rs  instance.rs  manager.rs  mod.rs  resolver.rs  typing.rs
projects/psi-core/src/node/: mod.rs
projects/psi-core/src/records/: mod.rs
projects/psi-core/src/records/cst_node/: mod.rs
projects/psi-core/tests/: main.rs
projects/psi-core/tests/test_language/: mod.rs
