[package]
name = "psi-core"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Yggdrasil Shared Structure"
repository = "https://github.com/ygg-lang/yggdrasil-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
dashmap = "5.4.0"
mime = "0.3.16"
mediatype = "0.19.13"
url = "2.3.1"
fluent = "0.16.0"

[features]
default = []
